--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,20 @@
+*.class
+.classpath
+*.jar
+*.war
+*.ear
+hs_err_pid*
+logs/
+target/classes/
+/target/
+/.settings
+*/target/
+*/abator/
+*/.settings
+/abator
+/.project
+*/.project
+cloud-diy-app/src/main/webapp/.idea/
 *.iml
+.idea/
+log
